--- a/gitcom/app/index.html
+++ b/gitcom/app/index.html
@@ -3,41 +3,35 @@
 	<head lang="en">
 		<meta charset="utf-8">
 		<title>GitCom</title>
-		<link rel="stylesheet" type="text/css" href="static/style.css">
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-		<script
-		src="https://code.jquery.com/jquery-3.4.1.min.js"
-		integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
-		crossorigin="anonymous"></script>
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-		<script type="text/javascript" src="static/js/handler.js"></script>
-	</head>
-
-	<body>
-			<div class="container-fluid">
-					<div class="row" style="height: 100%;">
-						<div class="col-2" style="max-width: 15%; ">
-								<div class="container-fluid">
-										<ul class="nav nav-pills " style="margin-top: 100px;">
-										  <li class="nav-item active">
-											<a class="nav-link " data-toggle="pill" href="#">Home</a>
-										  </li>
-										  <li class="nav-item">
-											<a class="nav-link" data-toggle="pill" href="#/admin">Admin</a>
-										  </li>
-								
-										</ul>
-									  </div>
-						</div>
-						<div class="col-10">
-								<ng-view></ng-view>
-						</div>
-					</div>
-				
-				</div>
+		<script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
 		<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.28/angular.min.js"></script>
 		<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.28//angular-route.min.js"></script>
-		<script type="text/javascript" src="static/app.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+		<script src="static/js/handler.js" type="text/javascript" ></script>
+		<script src="static/app.js" type="text/javascript" ></script>
+		<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+		<link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"  rel="stylesheet" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+		<link href="static/style.css" rel="stylesheet" type="text/css" >
+	</head>
+	<body>
+		<nav class="navbar navbar-light bg-light elevation-z8">
+			<ul class="nav nav-pills" id="pills-tab" role="tablist">
+				<li class="nav-item">
+					<a class="nav-link active" data-toggle="pill" href="#/">Home</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" data-toggle="pill" href="#/admin">Admin</a>
+				</li>
+			</ul>
+		</nav>
+		<div class="container-fluid">
+			<div class="row">
+				<div class="col-10">
+					<ng-view></ng-view>
+				</div>
+			</div>
+			
+		</div>
 	</body>
 	</html>
